--- a/app/templates/_book_appointment_button.hbs
+++ b/app/templates/_book_appointment_button.hbs
@@ -1,15 +1,11 @@
-{{#if (is-and isUserLoggedIn session.currentUser.isCharity)}}
-  {{!-- {{#if isUserLoggedIn}} --}}
-    {{#link-to "request_purpose"}}
-      <div class="button small action">
-        {{ t "home.visit.action" }} <i class="fa fa-calendar"></i>
-      </div>
-    {{/link-to}}
-  {{else}}
-    {{#link-to "login" (query-params bookAppointment=true)}}
-      <div class="button small action">
-        {{ t "home.visit.action" }} <i class="fa fa-calendar"></i>
-      </div>
-    {{/link-to}}
-  {{!-- {{/if}} --}}
+{{#if isUserLoggedIn}}
+  <div class="button small action" {{action "redirectAsPerUserDetails"}}>
+    {{ t "home.visit.action" }} <i class="fa fa-calendar"></i>
+  </div>
+{{else}}
+  {{#link-to "login" (query-params bookAppointment=true)}}
+    <div class="button small action">
+      {{ t "home.visit.action" }} <i class="fa fa-calendar"></i>
+    </div>
+  {{/link-to}}
 {{/if}}
