fix mail to link

--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -25,7 +25,7 @@
         <br>
         <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 columns">
           <div class="small-12 columns id-confidential-text goods_details">
-            {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}} <a class="crossroads_email" href="mailto:{{unbound email}}"> local@crossroads.org.hk </a> {{t "order.goods_details.info_3"}}
+            {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}} <a class="crossroads_email" href="mailto: local@crossroads.org.hk"> local@crossroads.org.hk </a> {{t "order.goods_details.info_3"}}
           </div>
         </section>
         <br>
